--- a/src/main/webapp/WEB-INF/templates/detail2.html
+++ b/src/main/webapp/WEB-INF/templates/detail2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title th:text="'欢迎您:'+${session.currentUser.getMobileNumber()}">我的生活</title>
+    <title th:text="'欢迎您,'+${session.currentUser.getMobileNumber()}">我的生活</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -22,11 +22,11 @@
             <h1 class="title" th:text="'欢迎您,'+${session.currentUser.getMobileNumber()}">我的生活</h1>
         </header>
         <nav class="bar bar-tab">
-            <a class="tab-item" href="/">
+            <a class="tab-item" href="messages">
                 <span class="icon icon-message"></span>
                 <span class="tab-label">短信</span>
             </a>
-            <a class="tab-item external active" href="/contact">
+            <a class="tab-item external active" href="contact">
                 <span class="icon icon-phone"></span>
                 <span class="tab-label">通话</span>
             </a>
@@ -43,6 +43,15 @@
                             <p class="color-gray" th:text="${contact.date}">发表于 2015/01/15</p>
                             <p th:text="'通话时长'+${contact.duration}+'分钟'">此处是内容...</p>
                         </div>
+                    </div>
+                    <div class="card-footer" th:switch="${contact.type}">
+                        <a th:case="1" href="#" class="link">来电</a>
+                        <a th:case="2" href="#" class="link">已拨</a>
+                        <a th:case="3" href="#" class="link">未接</a>
+                        <a th:case="4" href="#" class="link">语音邮箱</a>
+                        <a th:case="5" href="#" class="link">拒接</a>
+                        <a th:case="6" href="#" class="link">黑名单</a>
+                        <!--<a href="#" class="link">更多</a>-->
                     </div>
                 </div>
             </div>
